--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <script src="./index_files/p5.js.下载"></script>
-    <script src="./index_files/p5.min.js.下载"></script>
-    <script src="./index_files/p5.easycam.js.下载"></script>
-    <script src="./index_files/sketch.js.下载"></script>
+    <script src="./p5.js.下载"></script>
+    <script src="./p5.min.js.下载"></script>
+    <script src="./p5.easycam.js.下载"></script>
+    <script src="./sketch.js.下载"></script>
     <style>
         html, body {
             height: 100%;
